# Platform

./: CMakeLists.txt  Makefile  README.md  config.h.in  main.cpp  setup
Alphabet/: alphabet.cpp  alphabet.hpp
Audio/: CREDITS
Box2D/: Box2D.h
Box2D/Common/: b2Math.h
Button/: button.cpp  button.hpp
Collectible/: collectible.cpp  collectible.hpp
Counter/: counter.cpp  counter.hpp
Entity/: entity.cpp  entity.hpp
Fonts/: CREDIT.txt
Game/: game.cpp  game.hpp
GraphicString/: graphicString.cpp  graphicString.hpp
GroundObject/: groundObject.cpp  groundObject.hpp
Label/: label.cpp  label.hpp
Loader/: loader.cpp  loader.hpp
Menu/: menu.cpp  menu.hpp
NPC/: NPC.cpp  NPC.hpp
Object/: object.cpp  object.hpp
PhysicObject/: physicObject.cpp  physicObject.hpp
Player/: player.cpp  player.hpp
Portal/: portal.cpp  portal.hpp
Saves/: init.sv  init1.sv  temp.sv  test.sv
Sound/: sound.cpp  sound.hpp
TerrainObject/: terrainObject.cpp  terrainObject.hpp
